--- a/proj_template/app_template/templates/app_template/base.html
+++ b/proj_template/app_template/templates/app_template/base.html
@@ -33,6 +33,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'app_template.home' %}">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'app_template.historical_data' %}">Historical Data</a>
+                    </li>
                     <!-- Add other navbar links as needed -->
                 </ul>
                 <ul class="navbar-nav">
