--- a/proj_template/app_template/templates/app_template/live_projections.html
+++ b/proj_template/app_template/templates/app_template/live_projections.html
@@ -1,4 +1,38 @@
+
 {% extends "app_template/base.html" %}
 {% block content %}
-    <h1>Live Projections</h1>
+
+
+<div class="container mt-5">
+    <h2 class="mb-4">NFL Projections Table</h2>
+    <table class="table table-bordered">
+        <thead class="thead-light">
+            <tr>
+                <th><a href="?sort_by=team__name">Team Name</a></th>
+                <th><a href="?sort_by=-team__elo">Elo</a></th>
+                <th><a href="?sort_by=-madePlayoffs">Make Playoffs</a></th>
+                <th><a href="?sort_by=-wonDivision">Win Division</a></th>
+                <th><a href="?sort_by=-wonConference">Win Conference</a></th>
+                <th><a href="?sort_by=-wonSuperBowl">Win Super Bowl</a></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for projection in projections %}
+            <tr>
+                
+                <td>{{ projection.team.name }}</td>
+                <td>{{ projection.team.elo }}</td>
+                <td>{{ projection.madePlayoffs}}%</td>
+                <td>{{ projection.wonDivision }}%</td>
+                <td>{{ projection.wonConference }}%</td>
+                <td>{{ projection.wonSuperBowl }}%</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 {% endblock content %}
