--- a/proj_template/app_template/static/app_template/main.css
+++ b/proj_template/app_template/static/app_template/main.css
@@ -4,12 +4,6 @@
   padding: 0;
 }
 
-.messages li {
-  margin-bottom: 10px;
-  padding: 10px;
-  border-radius: 5px;
-}
-
 .messages li.success {
   background-color: #dff0d8;
   border-color: #d0e9c6;
@@ -20,4 +14,10 @@
   background-color: #f2dede;
   border-color: #ebccd1;
   color: #a94442;
+}
+
+.messages li.warning {
+  background-color: #ffed75;
+  border-color: #dfe1a6;
+  color: #deba2d;
 }
