--- a/proj_template/app_template/templates/app_template/base.html
+++ b/proj_template/app_template/templates/app_template/base.html
@@ -47,8 +47,7 @@
                 <ul class="navbar-nav">
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'app_template.profile' %}">Profile: {{ request.user.username
-                            }}</a>
+                        <a class="nav-link" href="{% url 'app_template.profile' %}">Profile: {{ request.user.username }}</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'app_template.logout' %}">Logout</a>
