--- a/proj_template/main/templates/main/live_projections.html
+++ b/proj_template/main/templates/main/live_projections.html
@@ -30,10 +30,10 @@
                     <tr>
                         <td>{{ projection.team.name }}</td>
                         <td>{{ projection.team.elo }}</td>
-                        <td>{{ projection.madePlayoffs|divide:projection.n }}%</td>
-                        <td>{{ projection.wonDivision|divide:projection.n }}%</td>
-                        <td>{{ projection.wonConference|divide:projection.n }}%</td>
-                        <td>{{ projection.wonSuperBowl|divide:projection.n }}%</td>
+                        <td>{{ projection.made_playoffs|divide:projection.n }}%</td>
+                        <td>{{ projection.won_division|divide:projection.n }}%</td>
+                        <td>{{ projection.won_conference|divide:projection.n }}%</td>
+                        <td>{{ projection.won_super_bowl|divide:projection.n }}%</td>
                         {% for week in 1|to:18 %}
                         <td class="clickable-cell" data-value="{{ projection.team.name }}-{{ week }}"></td>
                         {% endfor %}
