--- a/proj_template/main/templates/main/live_projections.html
+++ b/proj_template/main/templates/main/live_projections.html
@@ -16,10 +16,10 @@
                     <tr>
                         <th><a href="?sort_by=team__name">Team Name</a></th>
                         <th><a href="?sort_by=-team__elo">Elo</a></th>
-                        <th><a href="?sort_by=-madePlayoffs">Make Playoffs</a></th>
-                        <th><a href="?sort_by=-wonDivision">Win Division</a></th>
-                        <th><a href="?sort_by=-wonConference">Win Conference</a></th>
-                        <th><a href="?sort_by=-wonSuperBowl">Win Super Bowl</a></th>
+                        <th><a href="?sort_by=-made_playoffs">Make Playoffs</a></th>
+                        <th><a href="?sort_by=-won_division">Win Division</a></th>
+                        <th><a href="?sort_by=-won_conference">Win Conference</a></th>
+                        <th><a href="?sort_by=-won_superbowl">Win Super Bowl</a></th>
                         {% for week in 1|to:18 %}
                         <th>Week {{ week }}</th>
                         {% endfor %}
