--- a/proj_template/main/templates/main/base.html
+++ b/proj_template/main/templates/main/base.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    
     {% load static %}
 
     <!-- Bootstrap meta tags and CSS -->
@@ -11,20 +10,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- CSS files -->
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'main/main.css' %}">
 
     {% if title %}
-        <title>Django main - {{ title }}</title>
+    <title>NFL Projections - {{ title }}</title>
     {% else %}
-        <title>Django main</title>
+    <title>NFL Projections</title>
     {% endif %}
 </head>
 
-<body style="padding-top: 70px;">
-    
+<body>
     <!-- Bootstrap Navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-md fixed-top" style="background-color: var(--primary-color);">
         <div class="container">
             <a class="navbar-brand" href="{% url 'main.home' %}">NFL Projections</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle"
@@ -66,16 +64,28 @@
     </nav>
 
     <!-- Messages -->
-    {% if messages %}
     <div class="container mt-3">
-        <div class="alert alert-info">
+        {% if messages %}
+        <ul class="messages">
             {% for message in messages %}
-            <div{% if message.tags %} class="alert alert-{{ message.tags }}" {% endif %}>{{ message }}
-        </div>
-        {% endfor %}
+            <li class="{{ message.tags }}">
+                <span class="icon">
+                    {% if message.tags == 'success' %}
+                    ✔
+                    {% elif message.tags == 'error' %}
+                    ✖
+                    {% elif message.tags == 'warning' %}
+                    ⚠
+                    {% else %}
+                    ℹ
+                    {% endif %}
+                </span>
+                {{ message }}
+            </li>
+            {% endfor %}
+        </ul>
+        {% endif %}
     </div>
-    </div>
-    {% endif %}
 
     <!-- Main content area -->
     <main class="container mt-5 pt-4">
